# corewar

./: .gitignore  Makefile  adding.c  adding2.c  asm  assembler.c  assembler.h  author  awm.c  awm.h  clears.c  convertation.c  delete_comments.c  exit2.c  fill_instr.c  ft_exit.c  gg.c  init_awm.c  main.c  my.cor  my.s  my_librires_functions.c  op.h  qq.sh  split.c  valid_args.c  valid_args_commands.c  valid_args_commands2.c  valid_args_commands3.c  valid_commands.c  valid_commands2.c  valid_commands3.c  valid_names.c  what_is_it.c  what_is_it2.c
asemb/: CMakeLists.txt  Makefile
asemb/asm.dSYM/Contents/Resources/DWARF/: asm
asemb/includes/: assembler.h  awm.h
asemb/src/: adding2.c  assembler.c  awm.c  delete_comments.c  exit2.c  init_awm.c  main.c  valid_args.c  valid_args_commands.c  valid_commands.c
asm/: CMakeLists.txt  Makefile  adding.c  asm  assembler.c  assembler.h  awm.c  awm.h  clears.c  convertation.c  exit2.c  fill_instr.c  ft_exit.c  main.c  my_librires_functions.c  op.h  valid_args.c  valid_commands3.c  valid_names.c
asm/includes/: assembler.h  awm.h
asm/src/: adding2.c  assembler.c  convertation.c  fill_instr.c  init_awm.c  valid_args_commands.c  valid_args_commands2.c  valid_args_commands3.c  valid_commands2.c
common_resources/: op.c  op.h
ft_printf/: .clang-format  CMakeLists.txt  Makefile
ft_printf/includes/: ft_printf.h
ft_printf/srcs/: add_double.c  add_paddings.c  add_prefix.c  add_to_out.c  add_unsigned.c  calc_double.c  callbacks.c  ft_printf.c  long_ariph.c  main_funcs.c  parse_character.c  parse_colors.c  parse_double.c  parse_flags.c  parse_format.c  parse_lenmod.c  parse_precision.c  parse_signed.c  parse_string.c  parse_type.c  parse_unsigned.c  parse_width.c  sub_functions.c
libft/: Makefile  author
libft/incl/: printf.h
libft/includes/: get_next_line.h  libft.h
libft/src/: ft_atoi.c  ft_bzero.c  ft_check_float.c  ft_count_words.c  ft_display.c  ft_initial.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_parser.c  ft_parser_add.c  ft_print_d.c  ft_print_float.c  ft_print_float_add.c  ft_print_ou.c  ft_print_s.c  ft_print_xxxp.c  ft_printf.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  (+40 more)
libft/srcs/: ft_abs.c  ft_array_add.c  ft_array_delete_all.c  ft_array_foreach.c  ft_array_get.c  ft_array_init.c  ft_array_insert.c  ft_array_new.c  ft_array_remove.c  ft_array_remove_all.c  ft_array_size.c  ft_atoi.c  ft_bubble_sort.c  ft_bzero.c  ft_calloc.c  ft_getc.c  ft_intmove.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstadd_back.c  ft_lstaddblank.c  ft_lstaddrevsorted.c  ft_lstaddsorted.c  ft_lstdel.c  ft_lstdelone.c  ft_lstfind.c  ft_lstget.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstnewblank.c  ft_lstremove_if.c  ft_lstsize.c  ft_max.c  (+63 more)
vm/: CMakeLists.txt  Makefile
vm/includes/: errors.h  visu.h  vm.h
vm/srcs/: check_arguments.c  check_op_types.c  control.c  create_dump.c  dl_list.c  errors.c  exec_process.c  game_field.c  init_vm.c  parse_arg.c  process_cycle.c  processes.c  read_be.c  read_champ.c  read_from_map.c  read_options.c  read_values.c  run_comands.c  run_commands.c  vm.c
vm/srcs/commands/: get_command_arg.c  process_add_run.c  process_aff_run.c  process_and_run.c  process_fork_run.c  process_ld_run.c  process_ldi_run.c  process_lfork_run.c  process_live_run.c  process_lld_run.c  process_lldi_run.c  process_or_run.c  process_st_run.c  process_sti_run.c  process_sub_run.c  process_xor_run.c  process_zjmp_run.c
vm/srcs/visu/: deinit.c  draw_all.c  draw_carriages.c  draw_info.c  draw_processes.c  get_color.c  init.c  print.c  process.c  reload_carriages.c  reload_fonts.c
vm/visu/includes/: visu.h
vm/visu/srcs/: deinit.c  draw_all.c  draw_info.c  init.c  process.c  reload_fonts.c
vm_champs/: my.cor  my.s
vm_champs/champs/examples/: bee_gees.cor  bee_gees.s
